--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@
           <li><b>NO</b> chickens🐓️ were harmed during the creation of this website.</li>
           <li><b>NOTHING ON THIS PAGE IS SERIOUS</b></li>
         </ul>
-        
+
         <h2 class="title">Contact</h2>
         <p> email: ug-admission#wcu.edu.pl <br>
-        Our public key can be found <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB">here</a>. <br>Fingerprint: <strong>830C 321A 7BD2 F2E2 3876  0C60 2D5D 295C 85EF B7BB</strong>
+          Our public key can be found <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB">here</a>. <br>Fingerprint: <strong>830C 321A 7BD2 F2E2 3876  0C60 2D5D 295C 85EF B7BB</strong>
         </p>
+
+        <h2 class="title">Donation?</h2>
+        <p> Donations with <b>no strings attached</b> are always appreciated. </p>
+        <a href="https://en.cryptobadges.io/donate/0x6b05Ce9c673c762538cfC9c4cb07e0da00B376AB"><img src="https://en.cryptobadges.io/badge/big/0x6b05Ce9c673c762538cfC9c4cb07e0da00B376AB?showBalance=true"></a>
       </div>
 
       <div class="footer">
