--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <p>GOOD LUCK ON YOUR COLLEGE APP</p>
 
         <h2 class="title">Disclaimers</h2>
+        <p>
         <ul>
           <li>Our logo is borrowed from UPenn; signed by our beloved director of admission, Colonel Harland David Sanders, the founder of KFC(cuz we are chicken university).</li>
           <li>The design for the admission portal is mostly copied from Northwestern since they rejected me. And I thought this can be a joke to me </li>
@@ -71,15 +72,24 @@
           <li><b>NO</b> chickens🐓️ were harmed during the creation of this website.</li>
           <li><b>NOTHING ON THIS PAGE IS SERIOUS</b></li>
         </ul>
-
+        </p>
         <h2 class="title">Contact</h2>
         <p> email: ug-admission#wcu.edu.pl <br>
           Our public key can be found <a href="https://keys.openpgp.org/vks/v1/by-fingerprint/830C321A7BD2F2E238760C602D5D295C85EFB7BB">here</a>. <br>Fingerprint: <strong>830C 321A 7BD2 F2E2 3876  0C60 2D5D 295C 85EF B7BB</strong>
         </p>
 
         <h2 class="title">Donation?</h2>
-        <p> Donations with <b>no strings attached</b> are always appreciated. </p>
-        <a href="https://en.cryptobadges.io/donate/0x6b05Ce9c673c762538cfC9c4cb07e0da00B376AB"><img src="https://en.cryptobadges.io/badge/big/0x6b05Ce9c673c762538cfC9c4cb07e0da00B376AB?showBalance=true"></a>
+        <p> Donations with <b>no strings attached</b> are always appreciated. <br></p>
+        <a href="https://en.cryptobadges.io/donate/0x6b05Ce9c673c762538cfC9c4cb07e0da00B376AB"><img src="https://en.cryptobadges.io/badge/big/0x6b05Ce9c673c762538cfC9c4cb07e0da00B376AB?showBalance=true"><br><br></a>
+       
+        <h2 class="title">Faculty Job Openings</h2>
+        <p>
+          The Wild Chicken University invites applications for two faculty positions. We wanted to create more content for the school, and an official website in Chinese.
+          <br> You will have your own @wcu.edu.pl email address
+          <br> Send us an email at <a href="mailto:careers@wcu.edu.pl"> careers@wcu.edu.pl </a> 
+          <br>我們希望你幫助我們一起寫幹話
+        </p>
+        
       </div>
 
       <div class="footer">
